# sfu_demo

./: .clang-format  LICENSE  README.md  run.sh
arm/: CMakeLists.txt  common.h  expf.h  logf.h  main.cpp  sinf.h
riscv/: CMakeLists.txt  common.h  expf.h  logf.h  main.cpp  sinf.h
x86/: CMakeLists.txt  common.h  expf.h  logf.h  main.cpp  sfu.h  sfu_table.py  sinf.h
